implement header bidding

--- a/src/partials/_head.html
+++ b/src/partials/_head.html
@@ -76,6 +76,9 @@
 <!-- Chartbeat top -->
 <script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
 
+<!-- Header Bidding Head Scripts -->
+<%= t.include("partials/_headerBidding.html") %>
+
 <%
 // if !project.embedded...
 }
