add divider above bottom sponsorship

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -28,6 +28,13 @@ main.concierge {
   flex: 1;
 }
 
+.divider {
+  flex: 1 100%;
+  width: 80%;
+  margin: 10px auto;
+  border-bottom: 1px solid @accent-light;
+}
+
 .catalog-covers, .catalog-list {
   flex: 1 100%;
 }
