add storyID for dfp targeting

--- a/src/partials/_sponsorship.html
+++ b/src/partials/_sponsorship.html
@@ -10,6 +10,7 @@
       mobileScaling: 1, // Same on mobile.
     });
 
+    var storyID = "nx-s1-5075305"
     googletag.pubads().setTargeting("testserver", `true`);
     // googletag.pubads().setTargeting("storyId", storyID);
     googletag.pubads().enableSingleRequest();
