--- a/src/partials/_sponsorship.html
+++ b/src/partials/_sponsorship.html
@@ -11,8 +11,8 @@
     });
 
     var storyID = "nx-s1-5075305"
-    googletag.pubads().setTargeting("testserver", `true`);
-    // googletag.pubads().setTargeting("storyId", storyID);
+    googletag.pubads().setTargeting("testserver", `false`);
+    googletag.pubads().setTargeting("storyId", storyID);
     googletag.pubads().enableSingleRequest();
     googletag.pubads().enableAsyncRendering();
     googletag.pubads().collapseEmptyDivs();
