Refactor sponsorship workflow to be similar to .org. Implement manual consent blocking

--- a/src/partials/_ad.html
+++ b/src/partials/_ad.html
@@ -1,1 +1,7 @@
-<div id="<%= id %>-wrap" class="has-sponsorship remove-embedded"><ps-google-dfp-ad id="<%= id %>-inner"><div class="GoogleDfpAd" id="<%= id %>" data-slot-sizes="" data-is-fluid="true" data-slot-adSizeMap="" data-slot-Name=""><span class="GoogleDfpAd-placeholder"></span></div></ps-google-dfp-ad></div>
+<aside id="ad-<%= config.location %>-wrap" class="ad-wrap <%= config.location %> visible" aria-label="advertisement">
+    <div class="ad-header "><span>Sponsor Message</span></div>
+    <div class="ad-config-wrap">
+        <div id="ad-<%= config.location %>" class="ad-config ad-<%= config.location %>" data-ad-config="<%= JSON.stringify(config).replace(/"/g, '&quot;') %>"></div>
+    </div>
+    <div class="ad-footer"></div>
+</aside>
