--- a/src/partials/_head.html
+++ b/src/partials/_head.html
@@ -14,7 +14,7 @@
 <meta name='format-detection' content='telephone=no'>
 
 <!-- GDPR compliance -->
-<script src="https://apps.npr.org/gdpr/gdprCompliance.js"></script>
+<script src="gdpr-compliance.js"></script>
 
 <% if (!project.embedded) { %>
 
@@ -76,8 +76,9 @@
 <!-- Chartbeat top -->
 <script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
 
+<%= t.include("partials/_geoedge.html") %>
 <!-- Header Bidding Head Scripts -->
-<%= t.include("partials/_headerBidding.html") %>
+<script src="loadHeaderBidding.js" async></script>
 
 <%
 // if !project.embedded...
