finish adding piano

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -17,9 +17,6 @@ main.concierge {
   min-height: 80vh;
   padding: 0px 0px 40px 0px;
 
-  @media @tablet-above {
-    padding: 0px;
-  }
 }
 
 .right-side {
@@ -62,6 +59,7 @@ h3 {
 @import "sponsorship";
 @import "about";
 @import "print";
+@import "piano";
 
 .screenshot {
   .catalog-covers {
