--- a/src/partials/_head.html
+++ b/src/partials/_head.html
@@ -17,7 +17,7 @@
 <script src="gdpr-compliance.js"></script>
 
 <!-- Piano -->
-<meta property="piano:piano_id" content="c62mMqyQpu">
+<meta property="piano:piano_id" content="9ENxKQ58pu">
 
 <meta property="piano:subscription_url" content="https://identity.api.npr.org/v2/web/subscriptions">
 
@@ -101,7 +101,7 @@ var _sf_startpt=(new Date()).getTime()
 
     tp = window.tp || [];
     // Set Application ID
-    tp.push(["setAid", 'c62mMqyQpu']);
+    tp.push(["setAid", '9ENxKQ58pu']);
     // Is application in sandbox?
     tp.push(["setSandbox", false]);
     // Does application use Piano ID?
