--- a/src/css/theming.less
+++ b/src/css/theming.less
@@ -18,3 +18,4 @@
 .setup-year(2022, @books-gold, @books-blue);
 .setup-year(2023, @books-red, @books-gold);
 .setup-year(2024, @books-blue, @books-red);
+.setup-year(2025, @books-gold, @books-blue);
