don't turn piano debug on by default

--- a/src/partials/_head.html
+++ b/src/partials/_head.html
@@ -107,7 +107,7 @@ var _sf_startpt=(new Date()).getTime()
     // Does application use Piano ID?
     tp.push(["setUseTinypassAccounts", false]);
 
-    tp.push(["setDebug", true]);
+    // tp.push(["setDebug", true]);
 
     // Execute when the page is first loaded
     tp.push(["init", function() {
